# smart_poultry_manus

./: CMakeLists.txt  Smart Poultry Management System.md  partitions.csv  sdkconfig.defaults
.github/workflows/: ci-cd.yml
components/actuator_alarm/: CMakeLists.txt  actuator_alarm.c
components/actuator_cooler/: CMakeLists.txt  actuator_cooler.c
components/actuator_door_servo/: CMakeLists.txt  actuator_door_servo.c
components/actuator_exhaust_fan/: CMakeLists.txt  actuator_exhaust_fan.c
components/actuator_fan/: CMakeLists.txt  actuator_fan.c
components/actuator_feed_dispenser/: CMakeLists.txt  actuator_feed_dispenser.c
components/actuator_heater/: CMakeLists.txt  actuator_heater.c
components/actuator_light/: CMakeLists.txt  actuator_light.c
components/actuator_manager/: CMakeLists.txt  actuator_manager.c
components/actuator_manager/include/: actuator_manager.h
components/actuator_water_pump/: CMakeLists.txt  actuator_water_pump.c
components/comm_manager/: CMakeLists.txt  comm_manager.c
components/config_manager/: CMakeLists.txt  config_manager.c
components/control_logic/: CMakeLists.txt  control_logic.c
components/ota_manager/: CMakeLists.txt  ota_manager.c
components/sensor_dht22/: CMakeLists.txt  sensor_dht22.c
components/sensor_door/: CMakeLists.txt  sensor_door.c
components/sensor_dust/: CMakeLists.txt  sensor_dust.c
components/sensor_light/: CMakeLists.txt  (+1 more)
components/sensor_manager/: CMakeLists.txt  sensor_manager.c
components/sensor_manager/include/: sensor_manager.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c
(+38 files in other folders)
